fix hero title on mobile

--- a/components/Hero/Hero.scss
+++ b/components/Hero/Hero.scss
@@ -35,6 +35,10 @@
         object-fit: cover;
     }
     .slide__title {
-        font-size: 4rem;
+        font-size: 2rem;
+
+        @include size('desktop') {
+            font-size: 4rem;
+        }
     }
 }
